--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ h1 {
     border-radius: 15px;
     margin-left: 150px;
 } 
+.h4skills {
+    color:var(--white-color);
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 .skill {  
     color: black; 
     padding: 1%; 
@@ -73,6 +80,18 @@ h1 {
 .skill.python .svg {
     margin-left: 5px; /* Adds some space between the SVG and text */
 }
+.swift{
+    background: #5FCFFA;
+    width: 25%; 
+}
+.skill.swift {
+    display: flex; /* Use flexbox for alignment */
+    align-items: center; /* Center items vertically */
+    margin-right: 5px;
+}
+.skill.swift .svg {
+    margin-left: 5px; /* Adds some space between the SVG and text */
+}
 .bash{
     background: #5b5858;
     width: 20%; 
@@ -123,7 +142,7 @@ h1 {
 }
 .tailwind{
     background: #62BAF3;
-    width: 98%;
+    width: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px); 
 }
 .skill.tailwind {
@@ -136,7 +155,8 @@ h1 {
 }
 .bootstrap{
     background: #7C1FF2;
-    width: 15%; 
+    width: 13.5%;
+    
 }
 .skill.bootstrap {
     display: flex; /* Use flexbox for alignment */
@@ -148,7 +168,7 @@ h1 {
 }
 .react{
     background: #499CC5;
-    width: 98%; 
+    width: 100%; 
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.react {
@@ -161,7 +181,7 @@ h1 {
 }
 .typescript{
     background: #4475C0;
-    width: 98%; 
+    width: 100%; 
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.typescript {
@@ -210,7 +230,7 @@ h1 {
 }
 .postgreSQL{
     background: #40648D;
-    width: 98%;
+    width: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.postgreSQL {
@@ -223,7 +243,7 @@ h1 {
 }
 .nodejs{
     background: #69A151;
-    width: 98%;
+    width: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.nodejs {
@@ -236,7 +256,7 @@ h1 {
 }
 .terraform{
     background: #7345B6;
-    width: 98%;
+    width: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.terraform {
@@ -249,7 +269,7 @@ h1 {
 }
 .ansible{
     background: #d3d2d2;
-    width: 98%;
+    width: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
 }
 .skill.ansible {
@@ -258,5 +278,18 @@ h1 {
     margin-right: 5px;
 }
 .skill.git .ansible {
+    margin-left: 5px; /* Adds some space between the SVG and text */
+}
+.electronics{
+    background: #507B5B;
+    width: 100%;
+    background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
+}
+.skill.electronics {
+    display: flex; /* Use flexbox for alignment */
+    align-items: center; /* Center items vertically */
+    margin-right: 5px;
+}
+.skill.git .electronics {
     margin-left: 5px; /* Adds some space between the SVG and text */
 }
